# Apollo

./: .gitignore  Apollo.sln  CMakeLists.txt  README.md
.dev/: open_al_on_ubuntu.txt
Apollo/: Apollo.vcxproj  Apollo.vcxproj.filters
Apollo/src/: SDL_utility.h  SDL_utlity.cpp  defaults.h  engine.cpp  engine.h  main.cpp  matrix4.h  render_window.cpp  render_window.h  test_app.cpp  test_app.h  vector2.h  window.h
Apollo/src/algebra/: matrix4.h  vector2.h  vector3.h
Apollo/src/algebra__/: angle.h  matrix4.h  quaternion.h  vector2.h  vector3.h
Apollo/src/audio/: audio_device.cpp  audio_device.h  listener.cpp  listener.h  music.cpp  music.h  sound.cpp  sound.h  sound_buffer.cpp  sound_buffer.h  sound_file_ogg.h  sound_file_wave.h  sound_interface.cpp  sound_interface.h  sound_queue_buffer.cpp  sound_source.cpp  sound_source.h  sound_state.h  sound_stream.h  sound_stream_factory.cpp
Apollo/src/audio/priv/: ogg_stream.cpp  ogg_stream.h
Apollo/src/graphics/: angle.h  blend_mode.cpp  blend_mode.h  circle_shape.cpp  circle_shape.h  color.h  drawable.cpp  drawable.h  font.cpp  font.h  image.cpp  image.h  matrix4.h  program_layout.h  quaternion.h  rect.h  rectangle_shape.cpp  rectangle_shape.h  render_states.h  render_target.cpp  render_target.h  render_window.cpp  render_window.h  shader.cpp  shader.h  shader_program.cpp  shader_program.h  sprite.cpp  sprite.h  text.cpp  text.h  texture.cpp  texture.h  texture_2d.cpp  texture_2d.h  transformable_2d.cpp  transformable_2d.h  uniform_buffer_object.cpp  uniform_buffer_object.h  vector2.h  (+10 more)
Apollo/src/sound/: audio_device.cpp  audio_device.h  audio_format.cpp  audio_format.h  music.cpp  music.h  sound.cpp  sound.h  sound_buffer.cpp  sound_buffer.h  sound_file_wave.cpp  sound_file_wave.h  sound_interface.cpp  sound_interface.h  sound_queue_buffer.h  sound_source.cpp  sound_source.h
Apollo/src/system/: assetstream.cpp  assetstream.h  background_worker.cpp  clock.cpp  clock.h  memstream.cpp  memstream.h
Apollo/src/utility/: endian.h  utility.h
Apollo/test_data/: test.frag
cmake/: dependencies.cmake
examples/demo_app/: main.cpp  test_app.cpp  test_app.h
extlibs/libs/glad/include/glad/: glad.h
extlibs/libs/glad/src/: glad.c
include/: apollo_main.h  engine.h
include/audio/: audio_device.h  audio_resource.h  music.h  sound.h  sound_buffer.h  sound_interface.h  sound_properties.h  sound_source.h  sound_stream.h  sound_stream_factory.h
include/audio/priv/: ogg_stream.h
include/graphics/: angle.h  blend_mode.h  context.h  drawable.h  font.h  rectangle_shape.h  render_states.h  render_target.h  render_window.h  shader.h  shader_program.h  shape_2d.h  text.h  texture.h  transformable_2d.h  uniform_buffer_object.h  vertex_2d.h  vertex_array_object.h  vertex_buffer_object.h  view_2d.h  view_3d.h
include/system/: background_worker.h  transient_context_lock.h
include/utility/: al_check.h  gl_check.h  utility.h
src/: engine.cpp
src/audio/: audio_device.cpp  audio_format.cpp  audio_resource.cpp  listener.cpp  music.cpp  sound.cpp  sound_buffer.cpp  sound_file_wave.cpp  sound_interface.cpp  sound_queue_buffer.cpp  sound_source.cpp  sound_stream_factory.cpp
src/audio/priv/: ogg_stream.cpp
src/graphics/: blend_mode.cpp  circle_shape.cpp  context.cpp  font.cpp  image.cpp  rectangle_shape.cpp  render_target.cpp  render_window.cpp  shader.cpp  shader_program.cpp  sprite.cpp  text.cpp  texture.cpp  transformable_2d.cpp  uniform_buffer_object.cpp  vertex_array_object.cpp  vertex_buffer_object.cpp  view_2d.cpp  view_3d.cpp
src/system/: assetstream.cpp  background_worker.cpp  clock.cpp  memstream.cpp  transient_context_lock.cpp
src/utility/: utility.cpp
test_data/: test.frag
